// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot primary 1`] = `
.c0 {
  background-color: #007bff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #ffffff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  background-color: #006fe6;
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="primary"
    fill="fill"
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
  >
    <styled.button
      color="primary"
      fill="fill"
      onClick={[Function]}
      type="button"
    >
      <StyledComponent
        color="primary"
        fill="fill"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        type="button"
      >
        <button
          className="c0"
          color="primary"
          fill="fill"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot primary outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #007bff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="primary"
    fill="outline"
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
  >
    <styled.button
      color="primary"
      fill="outline"
      onClick={[Function]}
      type="button"
    >
      <StyledComponent
        color="primary"
        fill="outline"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        type="button"
      >
        <button
          className="c0"
          color="primary"
          fill="outline"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot primary small  1`] = `
.c0 {
  background-color: #007bff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #ffffff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  background-color: #006fe6;
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="primary"
    fill="fill"
    onClick={[Function]}
    preventDefault={true}
    small={true}
    stopPropagation={true}
  >
    <styled.button
      color="primary"
      fill="fill"
      onClick={[Function]}
      small={true}
      type="button"
    >
      <StyledComponent
        color="primary"
        fill="fill"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        small={true}
        type="button"
      >
        <button
          className="c0"
          color="primary"
          fill="fill"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot primary small outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #007bff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="primary"
    fill="outline"
    onClick={[Function]}
    preventDefault={true}
    small={true}
    stopPropagation={true}
  >
    <styled.button
      color="primary"
      fill="outline"
      onClick={[Function]}
      small={true}
      type="button"
    >
      <StyledComponent
        color="primary"
        fill="outline"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        small={true}
        type="button"
      >
        <button
          className="c0"
          color="primary"
          fill="outline"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot white  1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #e1e5eb;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: #e1e5eb;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  background-color: #007bff;
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="white"
    fill="fill"
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
  >
    <styled.button
      color="white"
      fill="fill"
      onClick={[Function]}
      type="button"
    >
      <StyledComponent
        color="white"
        fill="fill"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        type="button"
      >
        <button
          className="c0"
          color="white"
          fill="fill"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot white outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: transparent;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: transparent;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="white"
    fill="outline"
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
  >
    <styled.button
      color="white"
      fill="outline"
      onClick={[Function]}
      type="button"
    >
      <StyledComponent
        color="white"
        fill="outline"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        type="button"
      >
        <button
          className="c0"
          color="white"
          fill="outline"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot white small 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #e1e5eb;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: #e1e5eb;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  background-color: #007bff;
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="white"
    fill="fill"
    onClick={[Function]}
    preventDefault={true}
    small={true}
    stopPropagation={true}
  >
    <styled.button
      color="white"
      fill="fill"
      onClick={[Function]}
      small={true}
      type="button"
    >
      <StyledComponent
        color="white"
        fill="fill"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        small={true}
        type="button"
      >
        <button
          className="c0"
          color="white"
          fill="fill"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot white small outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: transparent;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: transparent;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    color="white"
    fill="outline"
    onClick={[Function]}
    preventDefault={true}
    small={true}
    stopPropagation={true}
  >
    <styled.button
      color="white"
      fill="outline"
      onClick={[Function]}
      small={true}
      type="button"
    >
      <StyledComponent
        color="white"
        fill="outline"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        small={true}
        type="button"
      >
        <button
          className="c0"
          color="white"
          fill="outline"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;

exports[`Button snapshot wrong fill prop 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
}

.c0:active {
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
        "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
        "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
        "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
        "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
        "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
        "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
        "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
        "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
        "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
        "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
        "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
      },
    }
  }
>
  <Button
    fill="wrong"
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
  >
    <styled.button
      fill="wrong"
      onClick={[Function]}
      type="button"
    >
      <StyledComponent
        fill="wrong"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  background-color: ",
                [Function],
                ";
  border-color: ",
                [Function],
                ";
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: ",
                [Function],
                ";
  padding: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: ",
                [Function],
                ";

  &:hover {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                "
  }

  &:active {
    background-color: ",
                [Function],
                ";
    border-color: ",
                [Function],
                ";
    box-shadow: ",
                [Function],
                ";
    color: ",
                [Function],
                ";
  }
",
              ],
            },
            "displayName": "styled.button",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "button",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
        type="button"
      >
        <button
          className="c0"
          fill="wrong"
          onClick={[Function]}
          type="button"
        >
          button
        </button>
      </StyledComponent>
    </styled.button>
  </Button>
</ThemeProvider>
`;
